--- a/gb/18/7/10/n10552843.md
+++ b/gb/18/7/10/n10552843.md
@@ -1,29 +1,27 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cetaqr2477/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cetaqr2477/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/cetaqr2477/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cetaqr2477/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/cetaqr2477/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cetaqr2477/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/cetaqr2477/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cetaqr2477/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/cetaqr2477/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cetaqr2477/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/cetaqr2477/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cetaqr2477/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/cetaqr2477/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cetaqr2477/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/cetaqr2477/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cetaqr2477/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/cetaqr2477/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/cetaqr2477/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cetaqr2477/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cetaqr2477/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cetaqr2477/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cetaqr2477/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/auytan380/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/auytan380/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/auytan380/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>猴妈喂奶时温柔亲吻宝宝 母子俩的衣服引热议</h2>
-<a href="https://git.io/g"><img width="600" src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/cetaqr2477/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://dfu0th2rj4x8t.cloudfront.net/K1gdZvPnu"><img width="600" src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6></h6>
 <hr>
-	<p>【大纪元2018年07月11日讯】（大纪元记者许彦报导）妈妈对<ahref="https://github.com/cetaqr2477/djy/blob/master/gb/tag/%E5%AE%9D%E5%AE%9D.md#1">宝宝</a>无尽的关怀，可以说是世界上最深沉的爱。动物妈妈也不例外，它们对宝宝所表现出的爱令人动容。</p>
+	<p>【大纪元2018年07月11日讯】（大纪元记者许彦报导）妈妈对<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E5%AE%9D%E5%AE%9D.md#1">宝宝</a>无尽的关怀，可以说是世界上最深沉的爱。动物妈妈也不例外，它们对宝宝所表现出的爱令人动容。</p>
 <p><strong><span style="color: #008000;">看影片完整版&gt;&gt; </span></strong><br />
-	<a type='text/javaa' src='//vs.youmaker.com/js/jwplayer/jwplayer8-all.js'></a>
-	<link rel='stylesheet' target="_blank" href='//vs.youmaker.com/css/api2.css' type='text/css' media='all' />
-<div class="video_fit_container"><a ><a href="https://git.io/g"><img width="600" src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/cetaqr2477/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a="56.25%" src="//vs.youmaker.com/2018/0711/a9343921-806e-4cea-64b0-75d276243bf3?r=16x9&amp;s=1080x1080&api=2&url=https%3A%2F%2Fwww.epochtimes.com%2Fgb%2F18%2F7%2F10%2Fn10552843.md#1"></a></div></p>
-<p>这段于2017年10月20日在中国四川拍摄的视频，展示了一只6岁的<ahref="https://github.com/cetaqr2477/djy/blob/master/gb/tag/%E6%AF%8D%E7%8C%B4.md#1">母猴</a>“天天”和它1岁的猴<ahref="https://github.com/cetaqr2477/djy/blob/master/gb/tag/%E5%AE%9D%E5%AE%9D.md#1">宝宝</a>“玲玲”在沙发上互动的情景。天天温柔地怀抱着玲玲，拿着一瓶牛奶喂自己的宝宝。</p>
-<figure id="attachment_10552912" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/07/NTD-monkey-baby.jpg"><img class="wp-image-10552912 size-medium" src="https://i.epochtimes.com/assets/uploads/2018/07/NTD-monkey-baby-450x458.jpg" alt="" width="450" b="458" /></a><figcaption class="wp-caption-text">天天温柔地怀抱着玲玲，拿着一瓶牛奶喂自己的宝宝。（视频截图）</figcaption></figure>
+<div class="video_fit_container epoch_player"><div class="player-container" id="player-container-a9343921-806e-4cea-64b0-75d276243bf3" data-id="player-a9343921-806e-4cea-64b0-75d276243bf3"></div></div><a src="//vs.youmaker.com/assets/player/a9343921-806e-4cea-64b0-75d276243bf3?r=16x9&amp;s=1080x1080&&api=7&logo=true&url=https%3A%2F%2Fwww.epochtimes.com%2Fgb%2F18%2F7%2F10%2Fn10552843.md#1"></a></p>
+<p>这段于2017年10月20日在中国四川拍摄的视频，展示了一只6岁的<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E6%AF%8D%E7%8C%B4.md#1">母猴</a>“天天”和它1岁的猴<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E5%AE%9D%E5%AE%9D.md#1">宝宝</a>“玲玲”在沙发上互动的情景。天天温柔地怀抱着玲玲，拿着一瓶牛奶喂自己的宝宝。</p>
+<figure id="attachment_10552912" aria-describedby="caption-attachment-10552912" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/07/NTD-monkey-baby.jpg"><img class="wp-image-10552912 size-medium" src="https://i.epochtimes.com/assets/uploads/2018/07/NTD-monkey-baby-450x458.jpg" alt="" width="450" b="458" /></a><figcaption id="caption-attachment-10552912" class="wp-caption-text">天天温柔地怀抱着玲玲，拿着一瓶牛奶喂自己的宝宝。（视频截图）</figcaption></figure>
 <p>一边喂食，天天还不停轻柔地亲吻玲玲的脸，同时伸出爪子抚摸玲玲的头。天天的一举一动，无不显示出对猴宝宝的爱。</p>
-<figure id="attachment_10552913" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/07/NTD-monkey-baby-2.jpg"><img class="wp-image-10552913 size-medium" src="https://i.epochtimes.com/assets/uploads/2018/07/NTD-monkey-baby-2-450x458.jpg" alt="" width="450" b="458" /></a><figcaption class="wp-caption-text">一边喂食，天天还不停轻柔地亲吻玲玲的脸，同时伸出爪子抚摸玲玲的头。（视频截图）</figcaption></figure>
+<figure id="attachment_10552913" aria-describedby="caption-attachment-10552913" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/07/NTD-monkey-baby-2.jpg"><img class="wp-image-10552913 size-medium" src="https://i.epochtimes.com/assets/uploads/2018/07/NTD-monkey-baby-2-450x458.jpg" alt="" width="450" b="458" /></a><figcaption id="caption-attachment-10552913" class="wp-caption-text">一边喂食，天天还不停轻柔地亲吻玲玲的脸，同时伸出爪子抚摸玲玲的头。（视频截图）</figcaption></figure>
 <p>视频中，天天和玲玲都穿着运动衫和牛仔裤；猴妈妈和猴宝宝相依在一起享受着美好时光，可爱的场景也被拍摄下来，在网络上分享。</p>
-<figure id="attachment_10552914" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/07/NTD-monkey-baby-3.jpg"><img class="size-large wp-image-10552914" src="https://i.epochtimes.com/assets/uploads/2018/07/NTD-monkey-baby-3-600x588.jpg" alt="" width="600" b="588" /></a><figcaption class="wp-caption-text">天天和玲玲地穿着运动衫和牛仔裤。（视频截图）</figcaption></figure>
-<p>一名网友在Reddit平台写道，<ahref="https://github.com/cetaqr2477/djy/blob/master/gb/tag/%E6%AF%8D%E7%8C%B4.md#1">母猴</a>出于本能抚养着它们的宝宝，这是不需要接受训练的技能。</p>
+<figure id="attachment_10552914" aria-describedby="caption-attachment-10552914" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/07/NTD-monkey-baby-3.jpg"><img class="size-large wp-image-10552914" src="https://i.epochtimes.com/assets/uploads/2018/07/NTD-monkey-baby-3-600x588.jpg" alt="" width="600" b="588" /></a><figcaption id="caption-attachment-10552914" class="wp-caption-text">天天和玲玲地穿着运动衫和牛仔裤。（视频截图）</figcaption></figure>
+<p>一名网友在Reddit平台写道，<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E6%AF%8D%E7%8C%B4.md#1">母猴</a>出于本能抚养着它们的宝宝，这是不需要接受训练的技能。</p>
 <p>另一名网友说，它们是非常聪明的猴子，想要玩具、娱乐，就像人类一样，包括想穿衣服。许多黑猩猩可以穿衣服，它们自己会穿衣服。</p>
 <p>还有网友说：“我最近在一个动物园，（看到）一只猩猩穿着一件紫色T恤。它将T恤往上拉，这样脸就隐藏起来，与猩猩宝宝一起玩捉迷藏。”</p>
 <p>虽然很多网友都对天天对玲玲之间的爱和感情表示赞赏，但也一些人认为给猴子穿着人类衣服令人不安。一名脸书用户写道：“它们（猴子）不是玩具。”也有网友在reddit上写道，“为什么要给它们穿衣服？它们身上有毛。”</p>
-<figure id="attachment_10552911" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/07/53bb326677204f693ee866adb737a4ab.jpg"><img class="size-large wp-image-10552911" src="https://i.epochtimes.com/assets/uploads/2018/07/53bb326677204f693ee866adb737a4ab-600x338.jpg" alt="" width="600" b="338" /></a><figcaption class="wp-caption-text">科学家就用实验证明<ahref="https://github.com/cetaqr2477/djy/blob/master/gb/tag/%E6%AF%8D%E7%88%B1.md#1">母爱</a>不仅仅是喂食，更重要的是给予宝宝情感和支持。（视频截图）</figcaption></figure>
-<p>另一方面，在这段视频中，最吸睛的不是母猴<ahref="https://github.com/cetaqr2477/djy/blob/master/gb/tag/%E5%96%82%E5%A5%B6.md#1">喂奶</a>本身，更触动人心的是它对宝宝温柔的关爱。多年以前，曾有科学家就用实验证明做母亲，最重要的是给予宝宝情感上的支持。</p>
+<figure id="attachment_10552911" aria-describedby="caption-attachment-10552911" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/07/53bb326677204f693ee866adb737a4ab.jpg"><img class="size-large wp-image-10552911" src="https://i.epochtimes.com/assets/uploads/2018/07/53bb326677204f693ee866adb737a4ab-600x338.jpg" alt="" width="600" b="338" /></a><figcaption id="caption-attachment-10552911" class="wp-caption-text">科学家就用实验证明<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E6%AF%8D%E7%88%B1.md#1">母爱</a>不仅仅是喂食，更重要的是给予宝宝情感和支持。（视频截图）</figcaption></figure>
+<p>另一方面，在这段视频中，最吸睛的不是母猴<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E5%96%82%E5%A5%B6.md#1">喂奶</a>本身，更触动人心的是它对宝宝温柔的关爱。多年以前，曾有科学家就用实验证明做母亲，最重要的是给予宝宝情感上的支持。</p>
 <p>1959年，美国威斯康辛大学的著名心理学家哈里?哈洛（Harry F. Harlow，1905—1981）用恒河猴做实验，而后得出结论，母亲和宝宝之间的亲密接触与情感互动，是促使幼猴正常健康成长的重要因素。</p>
-<p>实验显示，小猴子更愿意和能够提供接触感和依恋感的猴妈妈在一起，而只提供奶水却不让人依恋的铁丝猴妈妈则不讨小猴喜欢。<ahref="https://github.com/cetaqr2477/djy/blob/master/gb/tag/%E6%AF%8D%E7%88%B1.md#1">母爱</a>的本质，绝对不是简单解决宝宝的饥渴，还应该包括对宝宝的爱抚、接触和心理的关怀。</p>
+<p>实验显示，小猴子更愿意和能够提供接触感和依恋感的猴妈妈在一起，而只提供奶水却不让人依恋的铁丝猴妈妈则不讨小猴喜欢。<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E6%AF%8D%E7%88%B1.md#1">母爱</a>的本质，绝对不是简单解决宝宝的饥渴，还应该包括对宝宝的爱抚、接触和心理的关怀。</p>
 <p><em>Video credit: <ahref="https://www.newsflare.com/video/165175/animals/monkey-bottle-feeds-her-baby-milk" target="_blank" rel="noopener noreferrer">Newsflare</a></em></p>
 <p>责任编辑：苏明真</p>
 	
@@ -31,36 +29,47 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/25/n12134928.md#1">香港大律师公会驳斥“港版国安法”草案</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/25/n12135048.md#1">中共强推港版国安法 柯文哲：加深台湾人厌恶</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/25/n12135293.md#1">总统府：港版国安法会让香港变一国一制 考虑修港澳条例 调整港人移民台湾门槛</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/25/n12135380.md#1">港版国安法 台民调：56%认为将毁一国两制</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/10/8/10/n2991298.md#1">拯救黑猩猩  别再为取悦人类而受虐</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/11/5/6/n3249191.md#1">小黑猩猩离开妈妈  人们这样喂它...好可爱哦</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/13/10/18/n3989243.md#1">黑猩猩也爱机器人 送礼交友社交兴致高</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/14/9/21/n4253799.md#1">饲养员流产 懂人话黑猩猩比手语“哭”了</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/15/4/14/n4411321.md#1">拒绝偷拍？ 黑猩猩击落无人机</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/15/6/13/n4456976.md#1">珍古德奔走有成 美修法保育豢养黑猩猩</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/16/8/23/n8228818.md#1">研究：黑猩猩偏好合作更甚竞争</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/17/5/29/n9199310.md#1">与黑猩猩斗智10年 台保育员从被扔粪到信任</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/20/10/21/n12490602.md#1">英男发推文说心情不好 收到10万则暖心留言</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/20/9/14/n12402112.md#1">英国女童写信给在天堂的小猫 意外收到回信</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/4/n11088075.md#1" target="_blank">野狐一禅：刻我心碑上的右派精英</a></li><li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/21/n11400032.md#1" target="_blank">澳立法会议员：公开直接制止中共迫害法轮功</a></li><hr>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/24/n11543039.md#1" target="_blank">颜智华：中国特大饥荒60周年祭（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/15/n9040079.md#1" target="_blank">【细语人生】见证大法的神奇（5）</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/23/n12131818.md#1">【直播回放】5.24港人反国安恶法游行</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/24/n12133843.md#1">弃绿卡回国近家破人亡 女硕士:千万别信宣传</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/25/n12134669.md#1">山东福建出现H9N2 台疾管署订旅游2级警示</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/25/n12134473.md#1">你中奖了吗？109年3-4月统一发票兑奖资讯</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/24/n12133387.md#1">分析：大陆社会信心崩溃 失业者不满情绪高</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/25/n12135738.md#1">唐绮阳预测下半年运势：选边站不容模糊以对</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/23/n12131774.md#1">黄耀明与艺文界数百人联署 抵制港版国安法</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/24/n12133574.md#1">无惧遭清算 何韵诗：未来不会离开香港</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/25/n12134313.md#1">与张上淳是堂兄弟 张洪量：有受影响才从医</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/22/n12128809.md#1">甄子丹与各国功夫好手隔空对打 结局很妙</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/24/n12133047.md#1">【纪元播报】历史上瘟疫：神农尝百草的秘密</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/21/n12127421.md#1">南朝人误入山洞 遇到汉代的道家隐士河上公</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/4/12/n12025000.md#1">【馨香雅句】德音雅乐 听乐以治心</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/20/n12123948.md#1">在瘟疫中救人的神仙</a></li>
-<li><a href="https://github.com/cetaqr2477/djy/blob/master/gb/20/5/20/n12123970.md#1">文艺复兴大师范艾克笔下精细之美</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751795.md#1">【方菲访谈】林培瑞：六四与今天的中国（上）</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752411.md#1">【时事军事】苏-35S被米格-29击落 刺痛了谁？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751784.md#1">中国最富城市之一深圳降薪 钱荒引爆民怨</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751624.md#1">中共吹嘘“最大常规航母” 分析：美国早已淘汰</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751705.md#1">外交人事洗牌 杨洁篪王毅继任人选引猜测</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13751191.md#1">客串韩剧下周播 范冰冰晒运动瘦身照宣传造势</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cetaqr2477/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cetaqr2477/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/7/10/n10552843.htm">猴妈喂奶时温柔亲吻宝宝 母子俩的衣服引热议</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/7/10/n10552843.htm">猴妈喂奶时温柔亲吻宝宝 母子俩的衣服引热议</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/cetaqr2477/djy/blob/master/gb/18/7/10/n10552843.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cetaqr2477/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cetaqr2477/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cetaqr2477/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cetaqr2477/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cetaqr2477/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/auytan380/djy/blob/master/gb/18/7/10/n10552843.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
